# Flagship-Engine-old

./: .gitignore  .gitmodules  CMakeLists.txt  makefile
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
res/: def.glsl  text.glsl
src/: arena.c  arena.h  buffer.c  buffer.h  cmd.c  cmd.h  console.c  console.h  cvar.c  cvar.h  flagship.h  input.c  input.h  main.c  mesh.c  mesh.h  objloader.c  platform_linux.c  platform_win.c  shader.c  shader.h  text.c  text.h  texture.c  texture.h  window.c  window.h  zac.h
